--- a/static/html/index.html
+++ b/static/html/index.html
@@ -7,7 +7,25 @@
     <title>index</title>
 </head>
 <body>
-<div id="app"><h1>{{ message.content }}</h1></div>
+<div id="app">
+    <div class="ui sidebar inverted vertical menu">
+        <a class="item">
+            1
+        </a>
+        <a class="item">
+            2
+        </a>
+        <a class="item">
+            3
+        </a>
+    </div>
+    <div class="pusher">
+        <!-- Site content !-->
+        <h1>{{ message.content }}</h1>
+        <button class="ui blue button" v-on:click="slidbar">Slidbar</button>
+    </div>
+
+</div>
 <script src="/static/js/jquery-3.1.1.min.js"></script>
 <script src="/static/js/semantic.min.js"></script>
 <script>
@@ -15,6 +33,12 @@
         el: '#app',
         data: {
             message: ""
+        },
+        methods: {
+            slidbar: function () {
+                $('.ui.sidebar')
+                        .sidebar('toggle');
+            }
         }
     });
     $.ajax({
@@ -22,7 +46,8 @@
         dataType: "json",
     }).done(function (msg) {
         index.message = msg;
-    })
+    });
+
 </script>
 </body>
 </html>
