--- a/static/html/topiclist.html
+++ b/static/html/topiclist.html
@@ -7,9 +7,34 @@
     <title>topic list</title>
 </head>
 <body>
-<div id="topiclist"></div>>
+
+<div id="topiclist">
+    <table class="ui celled table">
+        <tbody>
+        <tr v-for="item in items">
+            <td>{{ item.title }}</td>
+        </tr>
+        </tbody>
+    </table>
+</div>
 <script src="/static/js/jquery-3.1.1.min.js"></script>
 <script src="/static/js/semantic.min.js"></script>
+<script>
+    var toplist = new Vue({
+        el: "#topiclist",
+        data:{
+            items: []
+        }
 
+    });
+    $.ajax({
+        url: "http://127.0.0.1:8001/topiclist",
+        dataType: "json",
+    }).done(function (msg) {
+        console.log(msg);
+        toplist.items = msg;
+    })
+
+</script>
 </body>
 </html>
