--- a/static/html/topiclist.html
+++ b/static/html/topiclist.html
@@ -12,7 +12,7 @@
     <table class="ui celled table">
         <tbody>
         <tr v-for="item in items">
-            <td>{{ item.title }}</td>
+            <td href="/static/html/">{{ item.title }}</td>
         </tr>
         </tbody>
     </table>
