--- a/static/html/topiclist.html
+++ b/static/html/topiclist.html
@@ -23,7 +23,8 @@
     var toplist = new Vue({
         el: "#topiclist",
         data:{
-            items: []
+            items: [],
+
         }
 
     });
