--- a/static/html/topic.html
+++ b/static/html/topic.html
@@ -4,31 +4,41 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="/static/css/semantic.min.css">
     <script src="/static/js/vue.js"></script>
+    <script src="/static/js/vue-router.min.js"></script>
     <title>topic</title>
 </head>
 <body>
 <div id="topic">
-    <p>{{topic.route}}</p>
+    <!--<p>{{ topic.topic }}</p>-->
+    <a class="ui blue button" v-link="{path:'/home'}">home</a>
+    <a v-link="{path:'/about'}" class="ui blue button">about</a>
+    <router-view></router-view>
 </div>
+
 <script src="/static/js/jquery-3.1.1.min.js"></script>
 <script src="/static/js/semantic.min.js"></script>
-<script src="/static/js/vue-router.min.js"></script>
+
 <script>
-    var topic = new Vue({
-        el:"#topic",
-        data:{
-            topic:"",
-            route:this.$route.name,
+    var router = new VueRouter();
+    var Home = Vue.extend({
+        template: "<div><h1>home</h1><p>{{msg}}</p></div>",
+        data: function () {
+            return {msg: "hello, home"}
         }
     });
-    var route = new VueRouter();
-    $.ajax({
-        url:"http://127.0.0.1:8001/topic/1"
-    }).done(function (msg) {
-        console.log(topic.route);
-        topic.topic=msg;
-    })
+    var About = Vue.extend({
+        template: "<div><h1>home</h1><p>{{msg}}</p></div>",
+        data: function () {
+            return {msg: "hello, about"}
+        }
+    });
 
+    router.map({
+        "/home": {component: Home},
+        "/about": {component: About}
+    });
+    var topic = Vue.extend();
+    router.start(topic, "#topic")
 </script>
 </body>
 </html>
