--- a/static/html/topiclist.html
+++ b/static/html/topiclist.html
@@ -12,7 +12,7 @@
     <table class="ui celled table">
         <tbody>
         <tr v-for="item in items">
-            <td href="/static/html/">{{ item.title }}</td>
+            <td><a href="/static/html/topic.html">{{ item.title }}</a></td>
         </tr>
         </tbody>
     </table>
