use resource instead of jq

--- a/static/html/blog.html
+++ b/static/html/blog.html
@@ -14,7 +14,7 @@
     <router-view></router-view>
 </div>
 
-<script src="/static/js/jquery-3.1.1.min.js"></script>
+<script src="/static/js/vue-resource.min.js"></script>
 <script src="/static/js/semantic.min.js"></script>
 <script src="/static/js/index.js"></script>
 <script src="/static/js/topiclist.js"></script>
