--- a/static/html/blog.html
+++ b/static/html/blog.html
@@ -9,9 +9,14 @@
 </head>
 <body>
 <div id="blog">
-    <router-link class="ui blue button" to="/index" >Index</router-link>
-    <router-link class="ui blue button" to="/topiclist">Topic List</router-link>
-    <router-view></router-view>
+    <div class="ui teal stackable blue three main menu">
+        <router-link class="header  item" to="/index">Index</router-link>
+        <router-link class="item" to="/topiclist">Topic List</router-link>
+    </div>
+    <div>
+        <router-view></router-view>
+    </div>
+
 </div>
 <script src="/static/js/jquery-3.1.1.min.js"></script>
 <script src="/static/js/vue-resource.min.js"></script>
@@ -23,14 +28,14 @@
     var About = {
         template: "<div><h1>topic list</h1><p>topic list</p></div>"
     };
-    var routes =[{path: '/index', component: Index},
+    var routes = [{path: '/index', component: Index},
         {path: '/topiclist', component: Topiclist},
-        {path:'/topic/:id',name: 'topic',component:Topic}];
+        {path: '/topic/:id', name: 'topic', component: Topic}];
     var router = new VueRouter({routes});
     var blog = new Vue({
         router,
-        data:{
-            msg:"321"
+        data: {
+            msg: "321"
         }
     }).$mount("#blog")
 </script>
