--- a/static/html/blog.html
+++ b/static/html/blog.html
@@ -13,7 +13,7 @@
         <router-link class="header  item" to="/index">Index</router-link>
         <router-link class="item" to="/topiclist">Topic List</router-link>
     </div>
-    <div>
+    <div class="ui  grid">
         <router-view></router-view>
     </div>
 
