--- a/static/html/blog.html
+++ b/static/html/blog.html
@@ -10,6 +10,11 @@
 <body>
 <div id="blog">
     <div class="ui teal stackable blue three main menu">
+        <div class="item" >
+            <img src="/static/1.png">
+        </div>
+
+
         <router-link class="header  item" to="/index">Index</router-link>
         <router-link class="item" to="/topiclist">Topic List</router-link>
     </div>
