--- a/static/html/blog.html
+++ b/static/html/blog.html
@@ -17,6 +17,7 @@
 
         <router-link class="header  item" to="/index">Index</router-link>
         <router-link class="item" to="/topiclist">Topic List</router-link>
+        <router-link class="item" to="/test">Test</router-link>
     </div>
     <div class="ui  grid">
         <router-view></router-view>
@@ -29,13 +30,15 @@
 <script src="/static/js/index.js"></script>
 <script src="/static/js/topiclist.js"></script>
 <script src="/static/js/topic.js"></script>
+<script src="/static/js/test.js"></script>
 <script>
     var About = {
         template: "<div><h1>topic list</h1><p>topic list</p></div>"
     };
     var routes = [{path: '/index', component: Index},
         {path: '/topiclist', component: Topiclist},
-        {path: '/topic/:id', name: 'topic', component: Topic}];
+        {path: '/topic/:id', name: 'topic', component: Topic},
+        {path:"/test",name:"test",component:Test}];
     var router = new VueRouter({routes});
     var blog = new Vue({
         router,
