--- a/static/html/blog.html
+++ b/static/html/blog.html
@@ -6,7 +6,7 @@
     <script src="/static/js/vue.min.js"></script>
     <script src="/static/js/vue-router.min.js"></script>
     <script src="/static/js/vue-resource.min.js"></script>
-    <title>topic</title>
+    <title>Blog</title>
 </head>
 <body>
 <div id="blog">
