--- a/static/html/blog.html
+++ b/static/html/blog.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="/static/css/semantic.min.css">
-    <script src="/static/js/vue.min.js"></script>
+    <link rel="stylesheet" href="//cdn.bootcss.com/semantic-ui/2.2.0/semantic.min.css">
+    <script src="//cdn.bootcss.com/vue/2.0.2/vue.min.js"></script>
     <script src="/static/js/vue-router.min.js"></script>
-    <script src="/static/js/vue-resource.min.js"></script>
+    <script src="//cdn.bootcss.com/vue-resource/1.0.3/vue-resource.min.js"></script>
     <title>Blog</title>
 </head>
 <body>
@@ -23,8 +23,8 @@
     </div>
 
 </div>
-<script src="/static/js/jquery-3.1.1.min.js"></script>
-<script src="/static/js/semantic.min.js"></script>
+<script src="//cdn.bootcss.com/jquery/3.1.1/jquery.min.js"></script>
+<script src="//cdn.bootcss.com/semantic-ui/2.2.0/semantic.min.js"></script>
 <script src="/static/js/index.js"></script>
 <script src="/static/js/topiclist.js"></script>
 <script src="/static/js/topic.js"></script>
