--- a/static/html/blog.html
+++ b/static/html/blog.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="//cdn.bootcss.com/semantic-ui/2.2.0/semantic.min.css">
     <script src="//cdn.bootcss.com/vue/2.0.2/vue.min.js"></script>
-    <script src="/static/js/vue-router.min.js"></script>
+    <script src="//cdn.bootcss.com/vue-router/2.0.1/vue-router.min.js"></script>
     <script src="//cdn.bootcss.com/vue-resource/1.0.3/vue-resource.min.js"></script>
     <title>Blog</title>
 </head>
