--- a/static/html/blog.html
+++ b/static/html/blog.html
@@ -16,7 +16,6 @@
         </div>
         <router-link class="header  item" :to="{path: '/index'}" >Index</router-link>
         <router-link class="item" :to="{path: '/topiclist'}">Topic List</router-link>
-        <router-link class="item" :to="{path: '/test'}">Test</router-link>
     </div>
     <div class="ui  grid">
         <router-view></router-view>
@@ -28,12 +27,12 @@
 <script src="/static/js/index.js"></script>
 <script src="/static/js/topiclist.js"></script>
 <script src="/static/js/topic.js"></script>
-<script src="/static/js/test.js"></script>
+<script src="/static/js/404.js"></script>
 <script>
     var routes = [{path: '/index', component: Index},
         {path: '/topiclist', component: Topiclist},
         {path: '/topic/:id', name: 'topic', component: Topic},
-        {path: "/test", name: "test", component: Test}];
+        {path: "*", name: "test", component: NotFound}];
     var router = new VueRouter({routes,linkActiveClass :'active',mode:'history'});
     var blog = new Vue({
         router,
