--- a/static/html/blog.html
+++ b/static/html/blog.html
@@ -3,9 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="//cdn.bootcss.com/semantic-ui/2.2.0/semantic.min.css">
-    <script src="//cdn.bootcss.com/vue/2.0.2/vue.min.js"></script>
-    <script src="//cdn.bootcss.com/vue-router/2.0.1/vue-router.min.js"></script>
-    <script src="//cdn.bootcss.com/vue-resource/1.0.3/vue-resource.min.js"></script>
     <title>Blog</title>
 </head>
 <body>
@@ -24,6 +21,10 @@
 </div>
 <script src="//cdn.bootcss.com/jquery/3.1.1/jquery.min.js"></script>
 <script src="//cdn.bootcss.com/semantic-ui/2.2.0/semantic.min.js"></script>
+<script src="//cdn.bootcss.com/vue/2.0.2/vue.min.js"></script>
+<script src="//cdn.bootcss.com/vue-router/2.0.1/vue-router.min.js"></script>
+<script src="//cdn.bootcss.com/vue-resource/1.0.3/vue-resource.min.js"></script>
+<script src="//cdn.bootcss.com/vuex/2.0.0/vuex.min.js"></script>
 <script src="/static/js/index.js"></script>
 <script src="/static/js/topiclist.js"></script>
 <script src="/static/js/topic.js"></script>
