--- a/static/html/admin.html
+++ b/static/html/admin.html
@@ -11,9 +11,9 @@
         <div class="item">
             <img src="/static/1.png">
         </div>
-        <router-link class="header  item" :to="{path: '/index'}">Index</router-link>
-        <router-link class="item" :to="{path: '/topiclist'}">Topic List</router-link>
-        <router-link class="item" :to="{path:'/admin',component: Login}">login</router-link>
+        <router-link class="header  item" to="/">Index</router-link>
+        <router-link class="item" to="/topiclist">Topic List</router-link>
+        <router-link class="item" :to="{path:'/'}">login</router-link>
     </div>
     <div class="ui  grid">
         <router-view></router-view>
@@ -26,18 +26,10 @@
 <script src="//cdn.bootcss.com/vue-router/2.0.1/vue-router.min.js"></script>
 <script src="//cdn.bootcss.com/vue-resource/1.0.3/vue-resource.min.js"></script>
 <script src="//cdn.bootcss.com/vuex/2.0.0/vuex.min.js"></script>
-<script src="/static/js/index.js"></script>
-<script src="/static/js/topiclist.js"></script>
-<script src="/static/js/topic.js"></script>
 <script src="/static/admin/login.js"></script>
-<script src="/static/js/404.js"></script>
+
 <script>
-    var routes = [{path: '/', component: Index},
-        {path: '/index', component: Index},
-        {path:'/admin',component: Login},
-        {path: '/topiclist', component: Topiclist},
-        {path: '/topic/:id', name: 'topic', component: Topic},
-        {path: "*", name: "test", component: NotFound}];
+    var routes = [{path: '/admin', component: Login}];
     var router = new VueRouter({routes, linkActiveClass: 'active', mode: 'history'});
     var blog = new Vue({
         router,
