--- a/static/html/topic.html
+++ b/static/html/topic.html
@@ -2,26 +2,28 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="/static/css/semantic.min.css">
+    <link rel="stylesheet" href="//cdn.bootcss.com/semantic-ui/2.2.0/semantic.min.css">
     <title>test</title>
 </head>
 <body>
+<p>
+    <button class="ui button">test</button>
+</p>
+<div class='ui segment'>
+    <form class="ui form">
+        <div class="field">
+            <label>User name</label>
+            <input name="username" placeholder="User name" type="text">
+        </div>
+        <div class="field">
+            <label>PassWord</label>
+            <input name="PassWord" placeholder="PassWord" type="text">
+        </div>
+        <button class="ui blue button" type="submit">Submit</button>
+    </form>
+</div>
 
-<button onclick="test1('qqqqqqq')">test</button>
-<script src="/static/js/jquery-3.1.1.min.js"></script>
-<script src="/static/js/semantic.min.js"></script>
-
-<script>
-var test = function (va,callback) {
-    console.log(va);
-    callback(va)
-};
-function test1(va) {
-    test(va,function(va){
-    console.log(va);
-    console.log("anymore");
-})
-}
-</script>
+<script src="//cdn.bootcss.com/jquery/3.1.1/jquery.min.js"></script>
+<script src="//cdn.bootcss.com/semantic-ui/2.2.0/semantic.min.js"></script>
 </body>
 </html>
