use vuex but it not work

--- a/static/html/admin.html
+++ b/static/html/admin.html
@@ -16,6 +16,7 @@
         <router-link class="item" :to="{path:'/'}">login</router-link>
     </div>
     <div class="ui  grid">
+        <a>{{ msg }}</a>
         <router-view></router-view>
     </div>
 
