store state use vuex

--- a/static/html/blog.html
+++ b/static/html/blog.html
@@ -56,7 +56,8 @@
         },
         computed:{
             ok:function () {
-                return "you";
+
+                return store.state.username;
             }
         }
     }).$mount("#blog")
