--- a/static/html/blog.html
+++ b/static/html/blog.html
@@ -30,6 +30,7 @@
 <script src="/static/js/topiclist.js"></script>
 <script src="/static/js/topic.js"></script>
 <script src="/static/admin/login.js"></script>
+<script src="/static/admin/adduser.js"></script>
 <script src="/static/js/404.js"></script>
 <script>
     var routes = [{path: '/', component: Index},
